feat: Update README and setup scripts for improved Ubuntu installation and error handling